[gd_scene load_steps=15 format=3 uid="uid://chnf7urijtjtk"]

[ext_resource type="Script" path="res://inventory.gd" id="1_sma43"]
[ext_resource type="Texture2D" uid="uid://bv3n5po10owq6" path="res://User/ItemShop/Inventory/inventorybackground.png" id="2_4hsc7"]
[ext_resource type="FontFile" uid="uid://dx3k6gvhn6tbd" path="res://Texture/Symtext.ttf" id="2_exgv4"]
[ext_resource type="Texture2D" uid="uid://bmtisbyva6vwq" path="res://hoodie-icon.png" id="4_t0nxt"]
[ext_resource type="Texture2D" uid="uid://bb08rl6e7c3bu" path="res://sunglasses-icon.png" id="5_v88xp"]
[ext_resource type="Texture2D" uid="uid://bkyfr0snt1wee" path="res://unicorn-icon.png" id="6_r1swp"]
[ext_resource type="FontFile" uid="uid://bbvng6aev8qdq" path="res://Texture/DePixelKlein.ttf" id="7_7yl2d"]
[ext_resource type="Texture2D" uid="uid://bowf8vegt53l0" path="res://User/ItemShop/Inventory/Background_A.png" id="8_ljou5"]
[ext_resource type="Texture2D" uid="uid://b01jqovcxg8l" path="res://User/ItemShop/Inventory/Player.png" id="9_v7ldc"]
[ext_resource type="Texture2D" uid="uid://dmp6fij25g3xx" path="res://User/ItemShop/Inventory/Hoodie_A.png" id="10_priqr"]
[ext_resource type="Texture2D" uid="uid://dvwn7in33d1ak" path="res://User/ItemShop/Inventory/Unicorn_A.png" id="11_807gv"]
[ext_resource type="Texture2D" uid="uid://30uakkfut2tw" path="res://User/ItemShop/Inventory/Glasses_A.png" id="12_vn2gk"]

[sub_resource type="Theme" id="Theme_5t4ue"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0slkg"]
bg_color = Color(1, 0.870588, 0, 1)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sma43")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 184.0
texture = ExtResource("2_4hsc7")
expand_mode = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 63.0
offset_bottom = 176.0
theme = SubResource("Theme_5t4ue")
theme_override_colors/font_hover_color = Color(1, 0.027451, 0.760784, 1)
theme_override_fonts/font = ExtResource("2_exgv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_0slkg")
text = "Back"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 120.0
columns = 3

[node name="Hoodie" type="TextureRect" parent="GridContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_t0nxt")

[node name="HoodieCheck" type="CheckButton" parent="GridContainer/Hoodie"]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 52.0
offset_bottom = 84.0

[node name="Glasses" type="TextureRect" parent="GridContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_v88xp")

[node name="GlassesCheck" type="CheckButton" parent="GridContainer/Glasses"]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 52.0
offset_bottom = 84.0

[node name="Unicorn" type="TextureRect" parent="GridContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_r1swp")

[node name="UnicornCheck" type="CheckButton" parent="GridContainer/Unicorn"]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 52.0
offset_bottom = 84.0

[node name="Error" type="Label" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 320.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("7_7yl2d")
theme_override_font_sizes/font_size = 9
text = "Buy items in shop to see them here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 48.0
offset_right = 304.0
offset_bottom = 143.0
texture = ExtResource("8_ljou5")

[node name="Dog" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 139.0
texture = ExtResource("9_v7ldc")
stretch_mode = 2

[node name="Hoodie_rew" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 139.0
texture = ExtResource("10_priqr")
stretch_mode = 2

[node name="Unicorn_rew" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 139.0
texture = ExtResource("11_807gv")
stretch_mode = 2

[node name="Glasses_rew" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 139.0
texture = ExtResource("12_vn2gk")
stretch_mode = 2

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="GridContainer/Hoodie/HoodieCheck" to="." method="_on_hoodie_check_toggled"]
[connection signal="toggled" from="GridContainer/Glasses/GlassesCheck" to="." method="_on_glasses_check_toggled"]
[connection signal="toggled" from="GridContainer/Unicorn/UnicornCheck" to="." method="_on_unicorn_check_toggled"]
